# mathlab-thi-env

./: .gitignore  CHANGELOG.MD  README.md  pyproject.toml
config/: config_for_new_project_add.sh  start.mac.sh  update_before_start.sh
project/ufo/src/ufo/: cli.py
src/ufo/: cli.py
thi/: pyproject.toml
thi/i/ki/general/system/: CHANGELOG.utils.md  pyproject.toml
thi/i/ki/general/system/dtypes/: Progress.py  __init__.py
thi/i/ki/general/system/util/: README.md  __init__.py
thi/i/ki/general/system/util/cfg/: __init__.py  simulation.py
thi/i/ki/general/system/util/evaluation/: __init__.py  input_utils.py  type_utils.py
thi/i/ki/general/system/util/geometry/: __init__.py  geometry_utils.py
thi/i/ki/general/system/util/mathematik/: __init__.py  math_utils.py
thi/i/ki/project/: config_for_new_project_add.txt  pyproject.root.bak  pyproject.toml
thi/i/ki/project/angel/: CHANGELOG.angel.md  README.md  pyproject.toml  pyproject.toml.bak
thi/i/ki/project/angel/src/: cli.py
thi/i/ki/project/angel/src/core/: __init__.py  __main__.py  angel.py
thi/i/ki/project/ufo/: CHANGELOG.ufo.md  pyproject.toml  pyproject.toml.bak
thi/i/ki/project/ufo/pa/temp/Ufo-Simulation 3.2.9q-20251025/: ufosim3_2_9q.py
thi/i/ki/project/ufo/src/: cli.py
thi/i/ki/project/ufo/src/core/: __init__.py  __main__.py  ufo.py  ufo_autopilot.py  ufo_main.py  ufosim3_2_9q.py
thi/i/ki/project/ufo/src/core/cfg/: __init__.py  profil_config.py
thi/i/ki/project/ufo/src/core/profile/: __init__.py  h_profil.py  z_profil.py
thi/i/ki/project/ufo/src/tests/: pa2_utest.py.temp
