[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thi-general-utils"
version = "0.1.0"
description = "Allgemeine System- und Utility-Module"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]
authors = [{ name = "Tom Werner" }]
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]