[project]
name = "angel"
version = "3.2.1.1"
description = "Winkelberechnung via Arctan-Reihe"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "thi-general-utils>=0.1.0",
]
authors = [{ name = "Tom Werner" }]
license = { text = "MIT" }

[project.scripts]
angel = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]