[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thi-angel"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26", "thi-general-utils>=0.1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*"]
namespaces = true