[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufo"
version = "0.1.0"
description = "ufo – CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tom Werner" }]

[project.scripts]
ufo = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*"]
