[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufo"
version = "0.1.0"
description = "ufo – CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tom Werner" }]
dependencies = [
  "numpy>=1.26",
  "thi-general-utils>=0.1.0",
  "thi-angel>=0.1.0",
]

[project.scripts]
ufo = "core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*"]
